--- a/templates/view.html
+++ b/templates/view.html
@@ -51,11 +51,11 @@ Views
     Maths
   </a>
   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <a class="dropdown-item" href="/english/view/Level 1 🤓">Level 1 🤓</a>
-    <a class="dropdown-item" href="/english/view/Level 2 🧐">Level 2 🧐</a>
-    <a class="dropdown-item" href="/english/view/Level 3 🤨">Level 3 🤨</a>
-    <a class="dropdown-item" href="/english/view/Level 4 😕">Level 4 😕</a>
-    <a class="dropdown-item" href="/english/view/Level 5 😑">Level 5 😑</a>
+    <a class="dropdown-item" href="/math/view/Level 1 🤓">Level 1 🤓</a>
+    <a class="dropdown-item" href="/math/view/Level 2 🧐">Level 2 🧐</a>
+    <a class="dropdown-item" href="/math/view/Level 3 🤨">Level 3 🤨</a>
+    <a class="dropdown-item" href="/math/view/Level 4 😕">Level 4 😕</a>
+    <a class="dropdown-item" href="/math/view/Level 5 😑">Level 5 😑</a>
     <div class="dropdown-divider"></div>
     <a class="dropdown-item" href="#">Everything 🔥</a>
   </div>
@@ -105,3 +105,4 @@ Views
 </div>
 {% endif %}
 {% endblock %}
+
